Dark mode adjustments

--- a/layouts/maintenance/list.html
+++ b/layouts/maintenance/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="w-full px-4 pb-5 sm:pb-6 pt-1 mt4 sm:pt-3">
+  <div class="w-full px-4 pb-5 sm:pb-6 pt-1 mt4 sm:pt-3 text-black">
     <div class="lg:flex">
       <div class="order-2 w-full lg:w-1/5 md:px-5 lg:py-0 mb-4 sticky">
         <aside class="fixed-lTK mw5-l right-0 text-sm lg:border-l border-solid b--moon-gray py-4 sm:py-0 lg:px-4 nested-list-reset nested-links leading-normal">
