--- a/themes/newtheme/layouts/_default/baseof.html
+++ b/themes/newtheme/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html id="gohugoio" class="no-js" lang="{{ with $.Site.LanguageCode }}{{ . }}{{ else }}en-us{{ end }}">
   {{ partial "sections/common/head.html" . }}
-  <body class="m-0 font-sans bg-gray-50">
+  <body class="m-0 font-sans bg-gray-50 {{ block `body-classes` . }}na{{ end }}">
     {{ partial "sections/common/after-body-start.html" . }}
     {{ block "nav" . }}
       {{ partial "sections/nav/site-menu.html" . }}
